styles and design

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,8 +1,12 @@
 /* Header/Logo Title */
 .header {
-  padding: 60px;
+  padding: 10px;
   text-align: center;
-  background: #1abc9c;
+  background: #0099cc;
   color: white;
   font-size: 30px;
+}
+
+h1{
+  font-family: cursive;
 }
