--- a/src/styles.scss
+++ b/src/styles.scss
@@ -5,3 +5,30 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; background-
 .ng-invalid.ng-touched.ng-dirty:not([ngForm]){
 border: 1px solid red;
 }
+.alert {
+  padding: 20px;
+  background-color: #f44336;
+  color: white;
+  opacity: 1;
+  transition: opacity 0.6s;
+  margin-bottom: 15px;
+}
+
+.alert.success {background-color: #04AA6D;}
+.alert.info {background-color: #2196F3;}
+.alert.warning {background-color: #ff9800;}
+
+.closebtn {
+  margin-left: 15px;
+  color: white;
+  font-weight: bold;
+  float: right;
+  font-size: 22px;
+  line-height: 20px;
+  cursor: pointer;
+  transition: 0.3s;
+}
+
+.closebtn:hover {
+  color: black;
+}
